# sj_cmake

./: .gitignore  CMakeLists.txt  build.sh  main.c  run.sh
lib/: CMakeLists.txt
sj_lib/: CMakeLists.txt
sj_src/: CMakeLists.txt  main.c
